<resources>
    <string name="app_name">Wobe</string>

    <string name="facebook_app_id">1572886879421703</string>
    <string name="fb_login_protocol_scheme">fb1572886879421703</string>


    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="any_amount_any_phone">Any Amount\nAny Phone</string>
    <string name="start_selling">Start selling pulsa with amount of saldo.</string>
    <string name="all_you_need">All you need is your phone.</string>
    <string name="count_on_us">Count\nOn Us</string>
    <string name="questions_or_problems">Whenever you have any questions, or problems,</string>
    <string name="talk_to_us">You can talk to us.</string>
    <string name="anytime_anywhere">Anytime\nAnywhere</string>
    <string name="sell">Sell from anywhere, any time. 24/7</string>
    <string name="login">LOGIN</string>
    <string name="register">REGISTER</string>
    <string name="check_internet_connection">Check Internet Connection</string>
    <string name="authentication_failed">Authentication Failed</string>
    <string name="google_sign_in">Sign In with Google</string>
    <string name="facebook_sign_in">Sign In with Facebook</string>
    <string name="google_sign_up">Sign Up with Google</string>
    <string name="facebook_sign_up">Sign Up with Facebook</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="first_name">Firstname</string>
    <string name="last_name">Lastname</string>
    <string name="enter_first_name">Please enter your Firstname</string>
    <string name="enter_last_name">Please enter your Lastname</string>
    <string name="enter_email">Please enter your Email</string>
    <string name="enter_email_to_verify">Please enter Email to Verify</string>
    <string name="enter_password">Please enter your Password</string>
    <string name="existing_user">Existing User. Please Sign In.</string>
    <string name="invalid_credentials">Invalid Credentials</string>
    <string name="error_message">Something went wrong</string>
    <string name="added">ADDED</string>
    <string name="added_icon">&#xf055;</string>
    <string name="sent">SENT</string>
    <string name="sent_icon">&#xf01b;</string>
    <string name="received">RECEIVED</string>
    <string name="received_icon">&#xf01a;</string>
    <string name="thumbs_up">&#xf058;</string>
    <string name="facebook_icon">&#xf082;</string>
    <string name="google_icon">&#xf0d4;</string>
    <string name="send_credits">Send Credits</string>
    <string name="recent_transactions">Transactions</string>
    <string name="to_email">To Email</string>
    <string name="description">Description</string>
    <string name="credits">Credits</string>
    <string name="verify">Verify</string>
    <string name="invalid_user">Invalid Recipient</string>
    <string name="send">Send</string>
    <string name="enter_cedits">Enter Credits</string>
    <string name="enter_description">Enter Description</string>
    <string name="insufficient_credits">Insufficient Credit Balance</string>
    <string name="enter_passcode">Enter Passcode</string>
    <string name="enter_correct_passcode">Enter Correct Passcode</string>
    <string name="set_passcode">Set Passcode</string>
    <string name="to_login_to_app">to Login to the app</string>
    <string name="transaction_successful">Transaction Successful</string>
    <string name="ok">OK</string>
    <string name="profile">Profile</string>
    <string name="logout">Logout</string>
    <string name="logout_message">Are you sure you want to Logout ?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="name">Name :</string>
    <string name="email_is">Email :</string>
    <string name="balance">Balance: </string>
    <string name="cannot_send_credits">Sender and receiver email address cannot be the same</string>
    <string name="enter_valid_email">Enter valid email address</string>
    <string name="min_first_name">Firstname should be at least 4 characters</string>
    <string name="min_password">Password should be at least 6 characters</string>

</resources>
