<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/ivIcon"
        android:layout_width="@dimen/seventy_70dp"
        android:layout_height="@dimen/seventy_70dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/fifty_50dp"
        android:src="@drawable/app_icon_transperant" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/ivIcon"
        android:layout_marginTop="@dimen/eighty_80dp"
        android:orientation="vertical">

        <ImageView
            android:layout_width="@dimen/thirty_30dp"
            android:layout_height="@dimen/thirty_30dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="@dimen/fifteen_15dp"
            android:src="@drawable/helper_one_screen_image" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/ten_10dp"
            android:gravity="center"
            android:text="@string/any_amount_any_phone"
            android:textColor="@color/colorAccent"
            android:textSize="@dimen/text_size_18sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:gravity="center"
            android:text="@string/start_selling"
            android:textColor="@color/white"
            android:textSize="@dimen/text_size_16sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/all_you_need"
            android:textColor="@color/white"
            android:textSize="@dimen/text_size_16sp" />

    </LinearLayout>

</RelativeLayout>