<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="?attr/actionBarSize"
    android:background="@drawable/transperant_background_image"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/detailsLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/ten_10dp"
        android:orientation="horizontal"
        android:padding="@dimen/ten_10dp"
        android:weightSum="2">

        <TextView
            android:id="@+id/tvName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ellipsize="end"
            android:maxLines="1"
            android:textColor="@color/colorPrimary"
            android:textSize="@dimen/text_size_18sp" />

        <TextView
            android:id="@+id/tvBalance"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_weight="1"
            android:gravity="end"
            android:textColor="@color/colorPrimary"
            android:textSize="@dimen/text_size_18sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_margin="@dimen/ten_10dp"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/etEmail"
                style="@style/edit_text_primary"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ellipsize="end"
                android:hint="@string/to_email"
                android:inputType="textEmailAddress"
                android:maxLength="45" />

            <Button
                android:id="@+id/tvVerify"
                android:layout_width="@dimen/margin_65dp"
                android:layout_height="@dimen/twenty_20dp"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:background="@drawable/button_red"
                android:text="@string/verify"
                android:textColor="@color/google_red"
                android:textSize="@dimen/text_size_14sp" />

        </RelativeLayout>

        <EditText
            android:id="@+id/etCredits"
            style="@style/edit_text_primary"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:enabled="false"
            android:hint="@string/credits"
            android:inputType="number"
            android:maxLength="10"
            android:textColor="@drawable/edit_text_selection"
            android:textColorHint="@color/edit_text_disable_color" />

        <EditText
            android:id="@+id/etDescription"
            style="@style/edit_text_primary"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:enabled="false"
            android:hint="@string/description"
            android:maxLength="55"
            android:textColor="@drawable/edit_text_selection"
            android:textColorHint="@color/edit_text_disable_color" />

        <Button
            android:id="@+id/btnSend"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/thirty_30dp"
            android:background="@drawable/button_primary_selector"
            android:enabled="false"
            android:paddingBottom="@dimen/ten_10dp"
            android:paddingEnd="@dimen/sixty_60dp"
            android:paddingLeft="@dimen/sixty_60dp"
            android:paddingRight="@dimen/sixty_60dp"
            android:paddingStart="@dimen/sixty_60dp"
            android:paddingTop="@dimen/ten_10dp"
            android:text="@string/send"
            android:textSize="@dimen/text_size_20sp" />

    </LinearLayout>

</RelativeLayout>