<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/twenty_20dp"
    android:background="@drawable/dialog"
    android:paddingLeft="@dimen/twenty_20dp"
    android:paddingRight="@dimen/twenty_20dp"
    android:paddingTop="@dimen/ten_10dp">

    <TextView
        android:id="@+id/tvDeleteConfirmation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="@dimen/ten_10dp"
        android:layout_marginTop="@dimen/ten_10dp"
        android:text="@string/logout_message"
        android:textColor="@color/colorPrimary"
        android:textSize="@dimen/text_size_16sp" />

    <View
        android:id="@+id/viewDivider"
        android:layout_width="match_parent"
        android:layout_height="@dimen/one_1dp"
        android:layout_below="@id/tvDeleteConfirmation"
        android:layout_marginTop="@dimen/five_5dp"
        android:background="@color/colorPrimary" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/forty_40dp"
        android:layout_below="@id/viewDivider"
        android:layout_marginBottom="@dimen/five_5dp"
        android:layout_marginTop="@dimen/five_5dp"
        android:orientation="horizontal"
        android:weightSum="2">

        <Button
            android:id="@+id/btnDeleteYes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/white"
            android:text="@string/yes"
            android:textColor="@color/colorPrimary" />

        <View
            android:layout_width="@dimen/one_1dp"
            android:layout_height="match_parent"
            android:background="@color/colorPrimary" />

        <Button
            android:id="@+id/btnDeleteNo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/white"
            android:text="@string/no"
            android:textColor="@color/colorPrimary" />
    </LinearLayout>

</RelativeLayout>